# atheme

./: .mailmap  COPYING  ChangeLog  INSTALL  Makefile.in  README  commit  configure  configure.ac
SQL/: atheme_init.sql
atheme-0.1.1/: ChangeLog  README
atheme-0.1.1/autoconf/: configure.in
atheme-0.1.1/include/: atheme.h  channels.h
atheme-0.1.1/src/: Makefile.in  atheme.c  help.c
atheme-0.1.2/: TODO  configure  setup
atheme-0.1.2/include/: module.h  node.h  stdinc.h  users.h
atheme-0.1.2/src/: .indent.pro  gservice.c  nickserv.c  node.c  socket.c  tokenize.c  version.sh
atheme-0.1/doc/: RELEASE
atheme-0.1/include/: confparse.h
atheme-0.1/modules/: example.c
atheme-0.1/src/: Makefile.in  balloc.c  flags.c  function.c  node.c  parse.c  version.sh
atheme-0.2/: Makefile.in  TODO
atheme-0.2.1/: ChangeLog  configure  setup
atheme-0.2.1/backend/: postgresql-experimental.c
atheme-0.2.1/include/: extern.h  stdinc.h  sysconf.h.in
atheme-0.2.1/modules/: cs_close.c  cs_drop.c  cs_kick.c  cs_op.c  cs_taxonomy.c  cs_xop.c  gs_help.c  ns_list.c  ns_mark.c  ns_sendpass.c
atheme-0.2.1/protocol/: plexus.c
atheme-0.2.1/src/: services.c
atheme-0.2.2/: ChangeLog  configure  configure.ac
atheme-0.2.2/SQL/: atheme_init.sql
atheme-0.2.2/autom4te.cache/: output.0
atheme-0.2.2/dbtool/: Makefile.in
atheme-0.2.2/include/: account.h  serno.h  services.h  servtree.h
atheme-0.2.2/modules/: cs_register.c  gs_global.c  ns_ghost.c  ns_identify.c  ns_info.c  ns_listmail.c  ns_register.c  ns_taxonomy.c  os_modunload.c  os_raw.c  os_update.c
atheme-0.2.2/protocol/: Makefile.in  undernet.c  unreal.c
atheme-0.2.2/src/: .indent.pro  Makefile.in  commandtree.c  pmodule.c
atheme-0.2/backend/: postgresql.c
atheme-0.2/include/: atheme.h  commandtree.h  metadata.h  phandler.h  users.h
atheme-0.2/modules/: Makefile.in  cs_ftransfer.c  cs_kick.c  cs_op.c  ns_myaccess.c  os_help.c  os_mode.c  os_noop.c
atheme-0.2/patches/: README
atheme-0.2/protocol/: dreamforge.c  scylla.c  shadowircd.c  unreal.c
atheme-0.2/src/: commandtree.c  dbhandler.c  event.c  function.c  node.c  services.c
atheme-0.3/: ChangeLog  configure
atheme-0.3/backend/: flatfile.c
atheme-0.3/include/: serno.h
atheme-0.3/protocol/: asuka.c  bahamut.c  bircd.c  charybdis.c  dreamforge.c  hyperion.c  plexus.c  ratbox.c  unreal.c
atheme-0.3/src/: cmode.c
atheme-1.0.1/: ChangeLog
atheme-1.0.1/include/: serno.h
atheme-1.0.2/: ChangeLog  configure  configure.ac
atheme-1.0.2/doc/: RELEASE
atheme-1.0.2/include/: extern.h  serno.h
atheme-1.0.2/protocol/: asuka.c  bahamut.c  bircd.c  charybdis.c  dreamforge.c  hybrid.c  hyperion.c  inspircd.c  ircnet.c  monkey.c  plexus.c  ptlink.c  ratbox.c  shadowircd.c  sorcery.c  ultimate3.c  undernet.c  unreal.c
atheme-1.0.2/src/: node.c
atheme-1.1.0/modules/: Makefile.in
atheme-1.2.0/: ChangeLog  setup
atheme-1.2.0/contrib/: cs_kickdots.c  ircd_noowner.c  us_generatepass.c
atheme-1.2.0/include/: serno.h
atheme-1.2.1/: configure  configure.ac
atheme-1.2.1/doc/: RELEASE
atheme-2.0.0/: configure  configure.ac
atheme-2.0.0/include/: serno.h
atheme-2.0.0/src/: conf.c
atheme-2.1.0/: ChangeLog  configure
atheme-2.1.0/src/: atheme.c
atheme-2.1.1/: configure.ac
atheme-2.1.1/contrib/: gen_vhostonreg.c  os_logonnews.c
atheme-2.1.1/doc/: IRCD  SASL
atheme-2.1.1/src/: atheme.c  channels.c  function.c  ptasks.c  tokenize.c
atheme-2.2.0/: ChangeLog  SVN-Access
atheme-2.2.0/doc/: TRANSLATION
atheme-2.2.0/include/: sysconf.h.in
atheme-2.2.0/src/: services.c
autoconf/: install-sh
autom4te.cache/: requests  traces.0
backend/: Makefile.in  flatfile.c  postgresql.c
contrib/: Makefile.in  cap_sasl.pl  ircd_catserv.c  ircd_nohalfops.c  ircd_noprotect.c  ns_generatepass.c  os_logonnews.c  perlxmlrpc.pl  rubyxmlrpc.rb  xmlrpc_explorer.php
crypto/: ircservices.c
doc/: LICENSE  RELEASE  SQL
email/default/: setpass
help/cservice/: akick  flags  set_noop  xop
help/nickserv/: register
inc/: sysconf.h
include/: account.h  authcookie.h  common.h  extern.h  module.h  phandler.h  pmodule.h  serno.h  servers.h  services.h  tools.h
include/protocol/: inspircd.h  monkey.h  unreal.h
libatheme/: linker.c  org.atheme.claro.base
libathemecore/: auth.c  logger.c  qrcode.c  services.c
modules/: cs_akick.c  cs_ban.c  cs_close.c  cs_flags.c  cs_halfop.c  cs_help.c  cs_info.c  cs_invite.c  cs_list.c  cs_login.c  cs_logout.c  cs_mark.c  cs_recover.c  cs_register.c  cs_sendpass.c  cs_set.c  cs_status.c  cs_topic.c  cs_voice.c  cs_xop.c  ns_drop.c  ns_help.c  ns_identify.c  ns_logout.c  ns_myaccess.c  ns_register.c  ns_set.c  ns_status.c  os_inject.c  os_jupe.c  os_kline.c  os_modlist.c  os_modload.c  os_modrestart.c  os_noop.c  os_rehash.c  os_restart.c  os_shutdown.c
modules/alis/: main.c
modules/auth/: dummy.c
modules/chanserv/: Makefile  akick.c  checkban_self.c  flags.c  halfop.c  invite.c  main.c  op.c  register.c  set.c  voice.c  xop.c
modules/crypto/: Makefile
modules/exttarget/: staff.c
modules/memoserv/: send.c
modules/nickserv/: Makefile  cert.c  identify.c  info.c  register.c  resetverify.c  return.c  sendpass.c  sendpass_user.c  set_pubkey.c  vhost.c
modules/operserv/: clones.c
modules/protocol/: bahamut.c  charybdis.c  hybrid.c  inspircd.c  ts6-generic.c  unreal.c
modules/saslserv/: Makefile  Makefile.in  dh-blowfish.c  ecdsa-nist256p-challenge.c  gssapi.c  main.c
modules/userserv/: Makefile.win32  login.c  status.c  vhost.c
patches/: README  atheme-ratbox-services.patch
protocol/: asuka.c  bahamut.c  bircd.c  hyperion.c  inspircd.c  inspircd10.c  inspircd11.c  ircnet.c  monkey.c  ptlink.c  ratbox.c  scylla.c  shadowircd.c  sorcery.c  ultimate3.c  undernet.c  unreal.c
src/: Makefile.in  account.c  atheme.c  authcookie.c  balloc.c  cmode.c  conf.c  confp.c  cservice.c  db.c  dbhandler.c  event.c  function.c  gservice.c  hook.c  match.c  module.c  nickserv.c  node.c  oservice.c  parse.c  phandler.c  pmodule.c  services.c  servtree.c  socket.c  uplink.c  version.sh
src/cservice/: ban.c  op.c  (+10 more)
(+70 files in other folders)
